-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
None
-
3de900a10c6fd051ba54727be2fd1fe47ed10481 (qt/qt3d/5.12.2)
The backend jobs are using node id's, which have not yet been created in the backend. Trying to access these nodes using nodeManagers return nullptr and if the jobs are not checking for this they crash.
In this use case we are creating new nodes dynamically and some of the nodes are being created(and added to the node managers) while others have not yet been created. In this case it seems that the entity is created first and also the scene change adding layer to the entity is processed, but the layer node is not yet created. Somehow these new entities are processed with the jobs before the layer nodes are created so the jobs crash, updateentitylayerjob in this case. I added nullptr check to the job, after which materialgathererjob also crashed in addParametersForIds.
- is required for
-
QT3DS-2676 Frequent crashes when changing sourcepath
-
- Closed
-
- relates to
-
QTBUG-65956 Nodes may be referenced on the backend before they have been created
-
- Closed
-
-
QTBUG-68276 [REG: 5.9.4->5.9.5]: Crash when adding an entity dynamically that has a texture
-
- Closed
-
-
QT3DS-2945 Dragon render and QT3D out of sync
-
- Closed
-
| For Gerrit Dashboard: QTBUG-72236 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247121,3 | Add nullptr checks to jobs | 5.12 | qt/qt3d | Status: ABANDONED | 0 | 0 |
| 247643,5 | Make sure backend node is created when component is added to Entity | 5.12.2 | qt/qt3d | Status: MERGED | +2 | 0 |
| 247797,3 | Add manual test for backend node creation for components | 5.12.2 | qt/qt3d | Status: MERGED | +2 | 0 |